# santiagoAristizabalM-mlops-U2

./: README.md  dockerfile  main.py  pyproject.toml
.github/workflows/: evento_1_pr.yml  evento_2_pr.yml
backend/: logic.py
database/: database.py  patient_data.db
templates/: index.html  stats.html
tests/: test_logic.py
