[project]
name = "mlopstaller1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-multipart>=0.0.28",
    "uvicorn>=0.46.0",
]
